--- a/iot-pulsar-test/build.gradle
+++ b/iot-pulsar-test/build.gradle
@@ -3,11 +3,12 @@ plugins {
 }
 
 dependencies {
-    implementation 'org.apache.pulsar:pulsar-broker:2.10.3'
+    testImplementation 'org.apache.pulsar:pulsar-broker:2.10.3'
     testImplementation 'org.apache.pulsar:testmocks:2.10.3'
     testImplementation 'org.mockito:mockito-core:4.11.0'
     testImplementation platform("org.testcontainers:testcontainers-bom:1.17.5")
     testImplementation('org.testcontainers:pulsar')
+    testImplementation 'com.hivemq:hivemq-mqtt-client:1.3.0'
 }
 testing {
     suites {
