Support cluster level client identifier validation

--- a/build.gradle
+++ b/build.gradle
@@ -26,4 +26,7 @@ subprojects {
     checkstyle {
         toolVersion = "8.37"
     }
+
+    checkstyleMain
+            .exclude('io/iot/pulsar/mqtt/api/proto/*.java')
 }
