--- a/iot-pulsar-test/build.gradle
+++ b/iot-pulsar-test/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     testImplementation platform("org.testcontainers:testcontainers-bom:1.17.5")
     testImplementation('org.testcontainers:pulsar')
     testImplementation 'com.hivemq:hivemq-mqtt-client:1.3.0'
+    testImplementation 'org.awaitility:awaitility:4.2.0'
 }
 testing {
     suites {
