--- a/iot-pulsar-mqtt/build.gradle
+++ b/iot-pulsar-mqtt/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java-library'
+    id "com.google.protobuf" version "0.9.2"
 }
 
 dependencies {
@@ -7,4 +8,5 @@ dependencies {
     implementation project(":iot-pulsar-agent")
     implementation "io.netty:netty-codec-mqtt:4.1.86.Final"
     implementation "io.netty:netty-handler:4.1.86.Final"
+    implementation 'com.google.protobuf:protobuf-java:3.21.12'
 }
