--- a/.github/workflows/ci-check-iot-pulsar.yml
+++ b/.github/workflows/ci-check-iot-pulsar.yml
@@ -21,5 +21,9 @@ jobs:
           java-version: 11
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v1
+        with:
+          version: '3.x'
       - name: Run build with Gradle Wrapper
         run: ./gradlew build
