--- a/iot-pulsar-agent/build.gradle
+++ b/iot-pulsar-agent/build.gradle
@@ -3,5 +3,6 @@ plugins {
 }
 
 dependencies {
+    implementation project(":iot-pulsar-common")
     implementation 'org.apache.pulsar:pulsar-broker:2.10.3'
 }
