--- a/.github/workflows/ci-check-iot-pulsar.yml
+++ b/.github/workflows/ci-check-iot-pulsar.yml
@@ -25,5 +25,6 @@ jobs:
         uses: arduino/setup-protoc@v1
         with:
           version: '3.x'
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Run build with Gradle Wrapper
         run: ./gradlew build
