--- a/.github/workflows/ci-check-iot-pulsar.yml
+++ b/.github/workflows/ci-check-iot-pulsar.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout project sources
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
@@ -25,5 +25,6 @@ jobs:
         uses: arduino/setup-protoc@v1
         with:
           version: '3.x'
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Run build with Gradle Wrapper
-        run: ./gradlew build
+        run: ./gradlew clean && ./gradlew build
