--- a/iot-pulsar-mqtt/build.gradle
+++ b/iot-pulsar-mqtt/build.gradle
@@ -9,4 +9,5 @@ dependencies {
     implementation "io.netty:netty-codec-mqtt:4.1.86.Final"
     implementation "io.netty:netty-handler:4.1.86.Final"
     implementation 'com.google.protobuf:protobuf-java:3.21.12'
+    implementation 'org.roaringbitmap:RoaringBitmap:0.9.38'
 }
